--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,6 @@ jobs:
         uses: AkhileshNS/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: jgNorthwind
+          heroku_app_name: jgnorthwinds
           heroku_email: ${{ secrets.email }}
           branch: ${{ github.ref_name }}
